--- a/lulachances/src/main/resources/application.properties
+++ b/lulachances/src/main/resources/application.properties
@@ -8,6 +8,10 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
+##rest config
+#server.servlet-path=/ # Path of the main dispatcher servlet.
+#server.context-path=/v1
+
 ##5434
 
 ##data source propeties
@@ -27,3 +31,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 ##spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL94Dialect
 
 ##5434
+
+#server.port=9999
+#security.user.password=password
+#server.contextPath=/uaa
