--- a/lulachances/src/main/resources/application.properties
+++ b/lulachances/src/main/resources/application.properties
@@ -2,15 +2,34 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/lulanches?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = 
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 ##jpa properties
 spring.jpa.show-sql = true
+spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
+#server.context-path=/lulanches
+
+server.port = 8090
+
+spring.jackson.serialization.INDENT_OUTPUT = true
+
+jwt.header = Authorization
+jwt.secret = tobbyentrevista
+jwt.expiration = 604800
+jwt.route.authentication.path = auth
+jwt.route.authentication.refresh = refresh
+#jwt.route.logout = logout
+
+#123456 - encoded - $2a$10$1cn9NZRKHOjY2W5ZHdM4iusgYeeTq8tf8vVAfHxvk2rolXeMSGtwe
+
 ##rest config
 #server.servlet-path=/ # Path of the main dispatcher servlet.
-#server.context-path=/v1
+#
+
+#jwt.route.authentication.path
 
 ##5434
 
